--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/polyfill": "^7.10.1",
     "jquery": "^3.5.1",
     "webpack-cli": "^3.3.12",
