--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.10.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^14.1.1",
