--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
         "@babel/preset-env"
     ],
     "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        ["@babel/plugin-transform-react-jsx"]
+        ["@babel/plugin-transform-react-jsx"],
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
+        ["@babel/plugin-proposal-class-properties", { "loose" : true }]
     ]
 }
